--- a/front.css
+++ b/front.css
@@ -14,6 +14,10 @@ header {
     text-align: center;
 }
 
+#front{
+    margin-right: 300px;
+}
+
 main {
     padding: 20px;
     color: #333;
@@ -30,6 +34,14 @@ h2 {
 
 p {
     line-height: 1.5;
+}
+
+footer{
+    width: 100vw;
+    background-color: lightcyan;
+    height: 100px;
+    margin-top: 100px;
+    text-align: center;
 }
 
 .back-button {
@@ -51,6 +63,16 @@ p {
 .animations {
     display: flex;
     justify-content: center;
+    
+}
+
+#blok{
+    text-align: center;
+}
+
+.animation-container{
+    margin-left: 45vw;
+    margin-top: 10px;
 }
 
 .box {
@@ -71,32 +93,32 @@ p {
 }
 
 
-.floating {
-    position: relative;
-    animation: floatAnimation 2s infinite;
-}
-
-@keyframes floatAnimation {
-    0% {
-        transform: translateY(0px);
+@keyframes scale {
+    0%, 100% {
+      transform: scale(1);
     }
     50% {
-        transform: translateY(-20px);
+      transform: scale(1.5);
     }
-    100% {
-        transform: translateY(0px);
-    }
-}
+  }
 
 .flash {
-    animation: flashAnimation 0.5s infinite alternate;
+    animation: flashAnimation 1s infinite alternate;
 }
 
 @keyframes flashAnimation {
     0% {
         opacity: 1;
     }
-    100% {
+    50% {
         opacity: 0;
     }
 }
+
+.animation {
+    width: 500px;
+    height: 100px;
+    animation-duration: 5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+  }
